GNOME Bugzilla – Bug 764118
Glitches in menu scroll arrow rendering
Last modified: 2016-03-24 19:28:59 UTC
Created attachment 324651 [details] menu scroll transparency It's hard to capture this (see screenshot for general idea), but basically they render the stuff underneath, but in a glitchier way. They're not outstanding glitches but you can see somethings not right. So: 1. open a long menu that requires scrolls 2. the menu scrolls will be transparent, rendering the stuff that would be underneath if the scroll wasn't there 3. when you hover over them, they will colour up grey, but _underneath_ the text, so you can still see it 4. the text doesn't update while you scroll 5. when you move your mouse elsewhere, it looks like step 2 again Also, not sure if this is on purpose or not, but the grey hover effect leaves a white border on the top or bottom edge, depending where the button is.
This is broken stylewise, but there is something wrong in gtk too, the text "remains" on top of the scroll arrow somehow.
Also this is inherited by Firefox (in the gtk3 version) and it's a lot more common there.
The style issue has been addressed by commit aa821429b179da70f4722e36803ec28b38515f89 I think the remaining issue is something with GtkTreeMenu, Matthias?
Created attachment 324719 [details] [review] menu: Clip children to view window Don't overdraw the arrow allocations.
Benjamin patch WorksForMeTM, closing