menu: Clip children to view window

Don't overdraw the arrow allocations.

https://bugzilla.gnome.org/show_bug.cgi?id=764118